--- a/kontakt.html
+++ b/kontakt.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="logo.png">
     <title>Kontakt</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
   <nav class="navbar">
@@ -41,26 +43,46 @@
     </form>
 -->
 
-    <form id="kontaktForma"
-  action="https://formspree.io/f/xkgqngor"
-  method="POST"
-><label for="name">Ime i prezime</label>
-<input type="text" id="name" name="name" required>
 
-<label for="email">E-mail adresa</label>
-<input type="email" id="email" name="email" required>
-
-<label for="message">Poruka</label>
-<textarea id="message" name="message" rows="5" required></textarea>
-
-  <button type="submit">Pošalji!</button>
+<form id="kontaktForma" action="https://formspree.io/f/xkgqngor" method="POST" style="color: white;">
+  <div class="mb-3">
+    <label for="ime" class="form-label">Ime i prezime</label>
+    <input type="text" class="form-control" id="ime" name="ime" required>
+  </div>
+  <div class="mb-3">
+    <label for="email" class="form-label">E-mail adresa</label>
+    <input type="email" class="form-control" id="email" name="email" required>
+  </div>
+  <div class="mb-3 form-check">
+    <label class="message" for="message">Poruka</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-  </section>
+
 
   <section class="map">
     <h2>Naša lokacija</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d999.8078759115707!2d13.816182872326555!3d44.86466203022895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477cd3af35bc02d1%3A0xada8d70aeba8aa0b!2sFi%C5%BEela%2020%2C%2052100%2C%20Pula!5e0!3m2!1sen!2shr!4v1757688868381!5m2!1sen!2shr" width="1100" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
+
+
+  <div class="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Uspjeh</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Uspješno ste poslali podatke.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
 <footer class="footer">
@@ -133,6 +155,35 @@
   });
 
   document.getElementById("kontaktForma").reset();
+  
+  const form = document.getElementById("kontaktForma");
+
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault(); // stop normal submit
+
+    const formData = new FormData(form);
+
+    try {
+      const response = await fetch(form.action, {
+        method: form.method,
+        body: formData,
+        headers: { 'Accept': 'application/json' }
+      });
+
+      if (response.ok) {
+        // show modal on success
+        const modal = new bootstrap.Modal(document.querySelector('.modal'));
+        modal.show();
+        form.reset();
+      } else {
+        alert("Greška pri slanju obrasca. Pokušajte ponovno.");
+      }
+    } catch (error) {
+      alert("Dogodila se pogreška: " + error.message);
+    }
+  });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
