--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="logo.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <title>Fisher Gate Naslovnica</title>
   <style>
     :root {
@@ -561,6 +563,30 @@
         </article>
       </div>
     </section>
+
+    <!-- Gumb za otvaranje -->
+<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#infoModal" style="">
+  Više informacija
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true" style="color: black;">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="infoModalLabel">Dobrodošli!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Ovo je modal!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zatvori</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   </main>
   <footer class="footer">
     <div class="grid">
@@ -637,6 +663,9 @@
           style="color:inherit;text-decoration:none">info@tvrtka.hr</a></div>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
   <script>
     const hamburger = document.querySelector('.hamburger');
