--- a/kontakt.html
+++ b/kontakt.html
@@ -545,18 +545,22 @@
     </form>
 -->
 
-      <form id="kontaktForma" action="https://formspree.io/f/xkgqngor" method="POST"><label for="name">Ime i
-          prezime</label>
-        <input type="text" id="name" name="name" required>
+      <form id="kontaktForma" action="https://formspree.io/f/xkgqngor" method="POST" class="needs-validation" novalidate>
+  <div class="mb-3">
+    <label for="name" class="form-label">Ime i prezime</label>
+    <input type="text" class="form-control" id="name" name="name" required>
+  </div>
+  <div class="mb-3">
+    <label for="email" class="form-label">E-mail adresa</label>
+    <input type="email" class="form-control" id="email" name="email" required>
+  </div>
+  <div class="mb-3">
+    <label for="message" class="form-label">Poruka</label>
+    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Pošalji!</button>
+</form>
 
-        <label for="email">E-mail adresa</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Poruka</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-
-        <button type="submit">Pošalji!</button>
-      </form>
     </section>
 
     <section class="map">
