--- a/usluge.html
+++ b/usluge.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="logo.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <title>Usluge</title>
   <style>
     :root {
@@ -540,8 +542,8 @@
 
     <section class="pricing">
       <h2>Cjenik</h2>
-      <table>
-        <thead>
+      <table class="table table-striped table-bordered table-hover">
+        <thead class="table-dark">
           <tr>
             <th>Paket</th>
             <th>Opis</th>
@@ -567,6 +569,7 @@
         </tbody>
       </table>
     </section>
+
   </main>
 
   <footer class="footer">
